client/styles/styles.scss
@import './constants.scss';
@import './material.scss';
@import '~bootstrap-css-only/css/bootstrap.min.css';

html, body {
  position: relative;
  margin: 0px;
  padding: 0px;
  width: 100%;
  height: 100%;
  overflow: hidden;

  @media only screen and (max-width: $sm) {
    overflow-y: auto;
    height: auto;
    min-height: 100%;
  }

  @media only screen and (max-width: $mat-mobile) {
    font-size: 13px;
  }
}

.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

.align-right {
  text-align: right;
}

.fill {
  width: 100%;
}

a.no-hover {
  &:hover {
    text-decoration: none;
  }
}

.page-title {
  font-size: 28px;
  margin-bottom: 10px;
  text-align: center;

  @media only screen and (max-width: $sm) {
    font-size: 24px;
  }
}

.block-label {
  display: block;
  font-weight: bold;
  color: $accent-darkest;
}

.inline-label {
  display: inline-block;
  margin-bottom: 2px;
  color: $accent;
  vertical-align: top;
  font-weight: bold;

  & + * {
    margin-left: 7px;
    vertical-align: top;
  }
}

.hide-number-spinner {
  input[type=number]::-webkit-inner-spin-button, 
  input[type=number]::-webkit-outer-spin-button { 
    -webkit-appearance: none !important; 
    margin: 0; 
  }
}

.donation-description-container {
  hr {
    margin: 0.6rem 0;

    &:first-child {
      margin-top: 0px;
    }
  }

  span {
    text-align: center;
    display: inline-block;
    margin: 0px 5px;
    width: 100%;
    font-weight: bold;
    font-size: 16px;
    color: $accent-darkest;
  }
}

.disclaimer {
  color: #666;
}

.action-footer {
  button {
    margin-right: 7px;

    &:last-child {
      margin-right: 0px;
    }
  }
}

@-webkit-keyframes greenPulse {
  0% { -webkit-box-shadow: 0px 0px 20px 3px #D1F5D1 inset; }
  50% { -webkit-box-shadow: 0px 0px 35px 6px lightgreen inset; }
  100% { -webkit-box-shadow: 0px 0px 20px 3px #D1F5D1 inset; }
}

@keyframes greenPulse {
  0% { box-shadow: 0px 0px 20px 3px #D1F5D1 inset; }
  50% { box-shadow: 0px 0px 35px 6px lightgreen inset; }
  100% { box-shadow: 0px 0px 20px 3px #D1F5D1 inset; }
}

.green-glow {
  /* Green Pulse inset shadow animation */
  -webkit-animation: greenPulse 5s infinite !important;
  animation: greenPulse 5s infinite !important;
}

header .notifications-button-container {
  .mat-badge-content.mat-badge-active {
    margin-right: 8px;
    top: 3px;

    @media screen and (max-width: $mat-mobile) {
      top: 1px;
    }
  }
}

/* Targets the actual notifications menu container... lots of confusing javascript overrides via !important */
.notifications-menu-backdrop + div {
  margin-top: 8px;

  .cdk-overlay-pane {
    .mat-menu-panel {
      max-width: 432px;
      max-height: 70vh;
      width: 100vw;
      overflow-x: hidden;

      .mat-menu-content {
        padding-top: 0;
        padding-bottom: 0;
      }

      @media only screen and (max-width: 462px) {
        max-width: 100vw;
        max-height: calc(100vh - #{$header-height-mobile + 60px});
        border-radius: 0;
      }
    }

    @media only screen and (max-width: $sm) {
      top: $header-height !important;
    }

    @media only screen and (max-width: 462px) {
      top: $header-height-mobile !important;
      right: 0 !important;
      max-width: 100vw !important;
    }
  }

  @media only screen and (max-width: $mat-mobile) {
    margin-top: 5px;
  }

  @media only screen and (max-width: 462px) {
    margin-top: 0;
  }
}

body.sticky-header {
  .notifications-menu-backdrop + div {  
    .cdk-overlay-pane {
      @media only screen and (max-width: $sm) {
        top: $sub-header-height-mobile !important;
      }
    }
  }
}

.fade-bottom {
  &:after {
    content: "";
    position: absolute;
    z-index: 1;
    bottom: 0;
    left: 0;
    pointer-events: none;
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.67) 90%);
    width: 100%;
    height: 100%;
  }
}

.check-yes, .cross-no {
  position: relative;
  display: inline-block;
  margin-top: 1px;

  mat-icon {
    font-size: 20px;
    width: 20px;
    height: 20px;
  }

  > span {
    display: inline-block;
    vertical-align: 5px;
    margin-left: 3px;
  }
}

.check-yes {
  mat-icon {
    color: green;
  }
}

.cross-no {
  mat-icon {
    color: red;
  }
}

.col-br {
  display: block;
  width: 100%;
  height: 0;
  margin: 0;
  padding: 0;

  &.mobile {
    display: none;

    @media only screen and (max-width: $sm) {
      display: block;
    }
  }

  &.mat-mobile {
    display: none;

    @media only screen and (max-width: $mat-mobile) {
      display: block;
    }
  }
}

@media only screen and (max-width: $md) {
  .d-inline-block.desktop {
    display: block !important;
  }
}

